--- a/style.css
+++ b/style.css
@@ -137,3 +137,16 @@ div {
     align-self: center;
     margin: 10px;
 }
+
+.imgContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.imgContainer >  a >img {
+    height: 300px;
+    /* width: 300px; */
+    /* object-fit: cover; */
+}
