--- a/Coffee/style.css
+++ b/Coffee/style.css
@@ -6,6 +6,7 @@
 
 .container {
   display: flex;
+  flex-direction: row-reverse;
 }
 
 .container-img {
@@ -41,6 +42,7 @@
 
 .form-text {
   font: normal normal normal 20px/29px Heebo;
+  width: 90%;
   color: #020253;
 }
 
@@ -91,6 +93,7 @@
 
   .form-text {
     font: normal normal normal 15px/22px Heebo;
+    width: 100%;
   }
 
   .form-control > label {
