--- a/gallery/style.css
+++ b/gallery/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
   font-family: 'Assistant', sans-serif;
 }
-body{
+
+body {
   background-color: #E5EEFF;
 }
 
@@ -31,7 +32,7 @@ h1 {
 }
 
 
-p{
+p {
   font: normal normal normal 20px/26px Assistant;
 }
 
@@ -74,8 +75,14 @@ p{
 
 
 .container-form {
-  grid-column: span 2;
-  grid-row: span 3;
+  grid-column-start: 3;
+  grid-column-end: 5;
+
+
+  grid-row-start: 4;
+  grid-row-end: 7;
+
+
   background-color: #8E097C;
   color: white;
 
@@ -149,7 +156,6 @@ form>button {
   font: normal normal bold 24px/33px Heebo;
   letter-spacing: 0.33px;
   color: #011560;
-  /* margin-top: 15px; */
   transition: font 0.3s ease;
 
 }
@@ -182,6 +188,9 @@ form>button:hover {
 
   .container-form {
     min-height: 850px;
+
+    grid-column: span 2;
+    grid-row: span 3;
   }
 
   p {
@@ -193,13 +202,12 @@ form>button:hover {
     transform: scale(1);
   }
 
-  
-    /* אלמנט ראשון ללא מרווח */
-    .text-content {
-      margin: -30px;
-      margin-bottom: 15px;
-    }
-  
+
+  /* אלמנט ראשון ללא מרווח */
+  .text-content {
+    margin: -30px;
+    margin-bottom: 15px;
+  }
+
 
 }
-
