--- a/Coffee/style.css
+++ b/Coffee/style.css
@@ -62,6 +62,7 @@
   background: #e5eeff 0% 0% no-repeat padding-box;
   border: 0;
   border-bottom: 4px solid #020253;
+  font: normal normal normal 20px/29px Heebo;
 }
 
 .form > button {
@@ -72,6 +73,11 @@
   letter-spacing: 0.33px;
   color: #ffffff;
   margin-top: 15px;
+  transition: font 0.3s ease-in-out;
+}
+
+form>button:hover {
+  font: normal normal bold 28px/37px Heebo;
 }
 
 @media (max-width: 1200px) {
