--- a/style.css
+++ b/style.css
@@ -176,8 +176,10 @@ span {
 }
 
 .footer {
-    padding: 10px;
+    padding: 0px;
     font-size: 0.7em;
+    margin: 0px;
+
 }
 
 
@@ -239,7 +241,10 @@ i:hover {
     background-color: white;
 }
 
-
+a{
+    text-decoration: none;
+    color: black;
+}
 
 
 
@@ -256,6 +261,47 @@ i:hover {
     object-fit: fill;
 } */
 
+.form-container {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.form-container img {
+    /* width: 400px; */
+    height: 400px;
+    object-fit: contain;
+
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+    text-align: right;
+}
+
+.form-control {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    
+}
+
+form label {
+    font-weight: bold;
+    
+}
+
+form input,
+form textarea {
+    text-align:right ;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 100%;
+    resize: none;
+}
 
 
 
