--- a/Coffee/style.css
+++ b/Coffee/style.css
@@ -3,7 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
 .container {
   display: flex;
   flex-direction: row-reverse;
