--- a/style.css
+++ b/style.css
@@ -127,7 +127,8 @@ p {
 }
 
 
-.projects {
+.css-projects,
+.js-projects {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -386,7 +387,7 @@ form button {
 
 
 @media (min-width: 1800px) {
-    .projects {
+    .css-projects, .js-projects {
         margin-left: calc((100vw - (400px * 4)) / 2);
         margin-right: calc((100vw - (400px * 4)) / 2);
     }
