--- a/js-projects/wood-calc/styles.css
+++ b/js-projects/wood-calc/styles.css
@@ -27,7 +27,6 @@ body {
     max-width: 95%;
     position: relative;
 
-    /* height: 80vh; */
     max-height: 95vh;
     display: flex;
     flex-direction: column;
@@ -45,7 +44,6 @@ body {
     font-size: 1em;
     line-height: 1.5;
     max-height: 40vh;
-    /* גובה מקסימלי קבוע */
     min-height: 100px;
 }
 
@@ -57,6 +55,38 @@ body {
     width: 100%;
     height: 5px;
     background: linear-gradient(90deg, #4776E6 0%, #8E54E9 100%);
+}
+
+
+@media (max-width: 500px) {
+    body {
+        padding: 0;
+    }
+
+    .container {
+        margin: 0;
+        width: 100vw;
+        height: 100vh;
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 0;
+    }
+}
+
+@media (max-height: 700px) {
+    body {
+        padding-top: 0;
+        padding-bottom: 0;
+        overflow-y: auto;
+        padding: 0;
+    }
+
+    .container {
+        margin: 0;
+        height: fit-content;
+        max-height: 100%;
+
+    }
 }
 
 h1 {
@@ -91,7 +121,6 @@ input:focus {
 button {
     width: 100%;
     padding: 14px;
-    /* margin-top: 10px; */
     background: linear-gradient(90deg, #4776E6 0%, #8E54E9 100%);
     color: white;
     border: none;
@@ -234,36 +263,7 @@ span {
     text-align: right;
 }
 
-@media (max-width: 500px) {
-    body {
-        padding: 0;
-    }
 
-    .container {
-        margin: 0;
-        width: 100vw;
-        height: 100vh;
-        max-width: 100%;
-        max-height: 100%;
-        border-radius: 0;
-    }
-}
-
-@media (max-height: 700px) {
-    body {
-        padding-top: 0;
-        padding-bottom: 0;
-        overflow-y: auto;
-        padding: 0;
-    }
-
-    .container {
-        margin: 0;
-        height: fit-content;
-        max-height: 100%;
-
-    }
-}
 
 .size-inputs-container {
     display: grid;
@@ -279,8 +279,8 @@ span {
 .size-inputs-container div {
     display: flex;
     align-items: center;
-    margin:  auto;
-    gap: 12px;
+    margin: auto;
+    gap: 10px;
     padding: 8px;
     background: white;
     border-radius: 10px;
@@ -352,7 +352,9 @@ input:disabled {
 }
 
 
-
+.collumn{
+    flex-direction: column;
+}
 
 
 
